--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.16",
     "path": "^0.12.7",
+    "short-id": "^0.1.0-1",
     "uuid": "^8.3.2"
   }
 }
